[UPDATE] Added full support for profile management and services
Signed-off-by: GiuliaPais <giuliapais1@gmail.com>