@@ -71,6 +71,9 @@
 						<option>--add-exports javafx.graphics/com.sun.javafx.scene=com.jfoenix</option>
 						<option>--add-opens javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
 						<option>--add-opens javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+						<option>--add-opens javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+						<option>--add-opens javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+						<option>--add-opens javafx.base/com.sun.javafx.event=com.jfoenix</option>
 					</options>
 					<launcher>Il_Paroliere</launcher>
 					<mainClass>uninsubria.client.gui.Launcher</mainClass>
